--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -607,3 +607,99 @@ button {
     bottom: 10%;
   }
 }
+
+/* -------------------------------footer------------------------------- */
+.footer {
+  background-color: black;
+  font-size: 20px;
+}
+
+.footer__container {
+  min-height: 500px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__header {
+  font-size: 34px;
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  align-items: center;
+}
+
+.footer__links {
+  display: flex;
+  gap: 25px;
+  font-size: 40px;
+}
+
+.footer__main {
+  flex: 1 1 auto;
+}
+
+.footer__bottom {
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.main-footer{
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-footer__column{
+  width: 33.33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-footer__label{
+  margin-bottom: 30px;
+}
+.label{
+  font-size: 30px;
+  font-weight: 700;
+}
+.main-footer__skills{
+  display: flex;
+  flex-wrap: wrap;
+  width: 200px;
+  gap:10px;
+}
+.main-footer__contacts{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.main-footer__skills-img {
+  width: 60px;
+  height: 60px;
+}
+.main-footer__skills a{
+  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+}
+@media (max-width:575.98px) {
+  .footer__header {
+    font-size: 20px;
+  }
+
+  .footer__links {
+    gap: 10px;
+  }
+}
+
+@media (max-width:767.98px) {
+  .main-footer__column{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+  }
+}
