--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -3,3 +3,4 @@ $marginButtomNotPhone: 100px;
 $titleFontSize: 34px;
 $titleFontSizePhone: 28px;
 $CommonFontSize: 20px;
+$LittleCommonFontSize: 18px;
