--- a/client/src/styles/ProductList.scss
+++ b/client/src/styles/ProductList.scss
@@ -8,6 +8,7 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     margin-top: 50px;
     margin-bottom: $marginButtomNotPhone;
+    min-height: 458px;
 
     @media (max-width: 558px) {
       margin-bottom: $marginButtomPhone;
