--- a/client/src/styles/ProductInfo.scss
+++ b/client/src/styles/ProductInfo.scss
@@ -188,6 +188,10 @@
         font-weight: 700;
         min-width: 70px;
         text-align: left;
+
+        @media (max-width:767.98px) {
+            text-align: center;
+        }
     }
 }
 
@@ -201,7 +205,8 @@
     &__description {
         word-wrap: break-word;
     }
-    &__text{
+
+    &__text {
         text-align: center;
         font-size: $CommonFontSize + 5px;
         font-weight: 700;
