--- a/client/src/components/UI/Modal/Modal.scss
+++ b/client/src/components/UI/Modal/Modal.scss
@@ -21,7 +21,7 @@
         padding: 30px;
         background-color: white;
         border-radius: 16px;
-        min-width: 200px;
+        max-width: 400px;
         opacity: 0;
         transform: translateY(-100%);
         transition: 0.4s;
