--- a/client/src/styles/Basket.scss
+++ b/client/src/styles/Basket.scss
@@ -16,6 +16,7 @@
         pointer-events: all;
     }
 
+
     &__content {
         padding: 30px;
         background-color: white;
@@ -43,15 +44,141 @@
 
     &__list {
         flex: 1 1 auto;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            display: block;
+            width: 5px;
+            overflow: auto;
+            height: 5px;
+            background-color: lightgray
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: gray;
+        }
     }
 
-    &__item {}
+    &__item {
+        border: 3px solid rgb(240, 236, 236);
+        display: flex;
+        max-height: 150px;
+        padding: 5px;
+        margin: 10px 0px;
 
-    &__footer {}
+        &:first-child,
+        &:last-child {
+            margin: 0;
+        }
+    }
 
+    &__photo {
+        position: relative;
+        background-color: lightgray;
+        padding: 40px 0px 20% 60px;
+        margin: 0px 0px 0px 0px;
+        width: 30%;
+        height: 100%;
+    }
+
+    &__photo img {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+    }
+
+    &__title {
+        margin-bottom: 40px;
+
+        @media (max-width:558.98px) {
+            margin-bottom: 20px;
+        }
+    }
+
+
+    &__info {
+        display: flex;
+        flex-direction: column;
+        flex: 1 1 auto;
+        margin-left: 5px;
+    }
+
+    &__info-close {
+        display: flex;
+
+        & svg {
+            flex: 0 0 32px;
+        }
+    }
+
+    &__item-name {
+        height: 30px;
+        overflow: hidden;
+    }
+
+    &__price-quantity {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
+    &__quantity {
+        font-size: $CommonFontSize + 4px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        align-items: center;
+
+        @media (max-width:767.98px) {
+            font-size: $LittleCommonFontSize + 2px;
+        }
+
+        &-block {
+            display: flex;
+            flex: 1 1 auto;
+            width: 120px;
+            height: 40px;
+            border: 2px solid black;
+
+            @media (max-width:410.98px) {
+                height: 40px;
+            }
+        }
+
+        &-button {
+            width: 32%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 5px;
+            font-weight: 700;
+            transition: 0.3s;
+
+            &:hover {
+                color: white;
+                background-color: black;
+            }
+        }
+
+        &-text {
+            width: 36%;
+            border-left: 2px solid black;
+            border-right: 2px solid black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 5px;
+            font-weight: 500;
+        }
+    }
 }
 
 .subtotal {
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     font-weight: 700;
