--- a/client/src/styles/BasketElem.scss
+++ b/client/src/styles/BasketElem.scss
@@ -8,11 +8,6 @@
     padding: 5px;
     margin: 10px 0px;
 
-    &:first-child,
-    &:last-child {
-        margin: 0;
-    }
-
     &__photo {
         position: relative;
         background-color: lightgray;
@@ -64,57 +59,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 5px;
-    }
-
-
-    &__quantity {
-        font-size: $CommonFontSize + 4px;
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10px;
-        align-items: center;
-
-        @media (max-width:767.98px) {
-            font-size: $LittleCommonFontSize + 2px;
-        }
-
-        &-block {
-            display: flex;
-            flex: 1 1 auto;
-            width: 120px;
-            height: 40px;
-            border: 2px solid black;
-
-            @media (max-width:410.98px) {
-                height: 40px;
-            }
-        }
-
-        &-button {
-            width: 32%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-bottom: 5px;
-            font-weight: 700;
-            transition: 0.3s;
-
-            &:hover {
-                color: white;
-                background-color: black;
-            }
-        }
-
-        &-text {
-            width: 36%;
-            border-left: 2px solid black;
-            border-right: 2px solid black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-bottom: 5px;
-            font-weight: 500;
-        }
+        margin-bottom: 10px;
+        margin-left: 5%;
+        margin-right: 5%;
+        font-weight: 700;
     }
 }
