--- a/client/src/components/UI/Modal/Modal.scss
+++ b/client/src/components/UI/Modal/Modal.scss
@@ -11,7 +11,6 @@
     opacity: 0;
     pointer-events: none;
     transition: 0.4s;
-
     &.active {
         opacity: 1;
         pointer-events: all;
@@ -24,9 +23,21 @@
         opacity: 0;
         transform: translateY(-100%);
         transition: 0.4s;
-
+        overflow-y: auto;
+        max-height: calc(100vh - 60px);
         @media (min-width: 525.98px) {
             margin: 0px 10%;
+        }
+        &::-webkit-scrollbar {
+            display: block;
+            width: 5px;
+            overflow: auto;
+            height: 5px;
+            background-color: lightgray;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: gray;
         }
     }
 
