--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -93,6 +93,10 @@
     line-height: 1.55;
   }
 
+  &__cart-icon {
+    cursor: pointer;
+  }
+
   &__quantity {
     width: 30px;
     height: 30px;
