--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -61,6 +61,9 @@
 
   &__link:hover {
     text-decoration: underline;
+    text-decoration-line: underline;
+    text-decoration-thickness: 5px;
+    text-underline-offset: 10px;
   }
 
   @media (min-width:767.98px) {
