--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -109,6 +109,9 @@
     align-items: center;
     font-size: $CommonFontSize;
     font-weight: 600;
+    position: relative;
+    top: -15px;
+    left: -5px;
   }
 }
 
