--- a/client/src/styles/Profile.scss
+++ b/client/src/styles/Profile.scss
@@ -155,6 +155,34 @@
     &__characteristic {}
 
     &__text {}
+
+
+
+    &__items {
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        margin-top: 50px;
+        margin-bottom: $marginButtomNotPhone;
+        min-height: 458px;
+    
+        @media (max-width: 481px) {
+          margin-bottom: $marginButtomPhone;
+          margin-top: 20px;
+        }
+    
+        @media (min-width: 480.98px) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+    
+        @media (min-width: 767.98px) {
+          grid-template-columns: repeat(3, 1fr);
+        }
+    
+        @media (min-width: 991.98px) {
+          grid-template-columns: repeat(4, 1fr);
+        }
+      }
 }
 
 .title {}
