Create UpdateProduct and undate SEO

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,62 +1,6 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import "Variables.scss";
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:hover {
-  color: inherit;
-}
-
-ul,
-ol,
-li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-
-html,
-body {
-  height: 100%;
-  line-height: 1;
-}
-
-button,
-input {
-  font-weight: inherit;
-  font-size: inherit;
-  color: inherit;
-  font-family: inherit;
-}
-
-button {
-  cursor: pointer;
-  background-color: inherit;
-}
+@import "reset.scss";
 
 .wrapper {
   min-height: 100%;
