--- a/client/src/styles/ProductCard.scss
+++ b/client/src/styles/ProductCard.scss
@@ -7,6 +7,7 @@
     border: 3px solid rgb(240, 236, 236);
     transition: border 0.3s ease-in-out;
     position: relative;
+    height: fit-content;
   }
 
   &__item:hover {
@@ -45,5 +46,21 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  &__svg-update {
+    position: absolute;
+    top: 10px;
+    right: 65px;
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
