--- a/client/src/styles/CreateProduct.scss
+++ b/client/src/styles/CreateProduct.scss
@@ -76,19 +76,13 @@ svg {
 
 .photos {
     &__main-photo {
-        position: relative;
-        background-color: lightgray;
-        padding: 90px 0px 80% 0px;
-        margin: 0px 0px 20px 0px;
+        background-color: #FFF;
+        display: flex;
     }
 
     &__main-photo img {
+        margin: 0 auto;
         width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        object-fit: cover;
     }
 
     &__all {
@@ -99,9 +93,7 @@ svg {
     }
 
     &__litle-photo {
-        position: relative;
-        background-color: lightgray;
-        padding: 70px 0px 20% 0px;
+
         width: 33%;
         border: 3px solid rgb(240, 236, 236);
         transition: border 0.3s ease-in-out;
@@ -110,18 +102,9 @@ svg {
             border: 3px solid black;
         }
 
-        @media (max-width: 767.98px) {
-            padding: 50px 0px 20% 0px;
-        }
-
     }
 
     &__litle-photo img {
         width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        object-fit: cover;
     }
 }
