--- a/client/src/styles/ProductCard.scss
+++ b/client/src/styles/ProductCard.scss
@@ -15,24 +15,19 @@
   }
 
   &__image {
-    position: relative;
     background-color: lightgray;
-    padding: 90px 0px 90% 0px;
-    margin: 0px 0px 20px 0px;
   }
 
-  &__image img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
+  &__image img {}
+
+  &__body {
+    margin-top: 10px;
+    margin-bottom: 5px;
   }
 
   &__name {
     font-size: $CommonFontSize;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     height: 25px;
     font-weight: 600;
   }
