--- a/client/src/styles/ProductInfo.scss
+++ b/client/src/styles/ProductInfo.scss
@@ -56,20 +56,10 @@
 
 .photos {
     &__main-photo {
-        position: relative;
-        background-color: lightgray;
-        padding: 90px 0px 80% 0px;
-        margin: 0px 0px 20px 0px;
+        margin-bottom: 20px;
     }
 
-    &__main-photo img {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        object-fit: cover;
-    }
+    &__main-photo img {}
 
     &__all {
         display: flex;
@@ -79,9 +69,6 @@
     }
 
     &__litle-photo {
-        position: relative;
-        background-color: lightgray;
-        padding: 70px 0px 20% 0px;
         width: 33%;
         border: 3px solid rgb(240, 236, 236);
         transition: border 0.3s ease-in-out;
@@ -90,20 +77,9 @@
             border: 3px solid black;
         }
 
-        @media (max-width: 767.98px) {
-            padding: 50px 0px 20% 0px;
-        }
-
     }
 
-    &__litle-photo img {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        object-fit: cover;
-    }
+    &__litle-photo img {}
 }
 
 .description {
